--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.21",
+    "lucide-react": "^0.511.0",
+    "next": "13.5.11",
+    "postcss": "^8.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.11"
+    "styled-jsx": "^5.1.7",
+    "tailwindcss": "^3.4.17"
   }
 }
